[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Fonts/Fredoka-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Scoreboard/Scoreboard.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/buttonLong_brown.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 75
font_data = ExtResource( 1 )

[node name="Scoreboard" type="Node"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1200.0
margin_bottom = 2040.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
margin_right = 1200.0
margin_bottom = 2040.0
texture = ExtResource( 3 )
patch_margin_left = 20
patch_margin_top = 19
patch_margin_right = 31
patch_margin_bottom = 22

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1200.0
margin_bottom = 2040.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
margin_left = 414.0
margin_right = 785.0
margin_bottom = 122.0
size_flags_horizontal = 4

[node name="Score" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_right = 371.0
margin_bottom = 122.0

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/Score"]
margin_right = 367.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 1 )
text = "SCORE: "

[node name="Amount" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/Score"]
margin_left = 371.0
margin_right = 371.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 1 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2"]
margin_top = 126.0
margin_right = 1200.0
margin_bottom = 373.0
custom_fonts/font = SubResource( 2 )
text = "Put your score in the comments!"
align = 1
valign = 1
autowrap = true

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer2"]
margin_top = 377.0
margin_right = 1200.0
margin_bottom = 469.0
custom_fonts/font = SubResource( 3 )
text = "Game will restart in 30 seconds..."
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 152, 296 )
amount = 25
explosiveness = 1.0
randomness = 1.0
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 10, 10 )
spread = 100.0
initial_velocity = 100.0
initial_velocity_random = 1.0
hue_variation = 1.0
hue_variation_random = 1.0
anim_speed = 5.0

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
position = Vector2( 904, 296 )
amount = 25
explosiveness = 1.0
randomness = 1.0
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 10, 10 )
spread = 100.0
initial_velocity = 100.0
initial_velocity_random = 1.0
hue_variation = 1.0
hue_variation_random = 1.0
anim_speed = 5.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
